# python-web-template

./: justfile  pyproject.toml
migrations/: V01__init.sql
src/: main.py
